# vibe

./: .gitignore  CONFIG.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  README.md  SHADER_WRITING.md  USAGE.md  flake.nix  plan.md  release-plz.toml  release.toml
src/: cli.rs  (+9 more)
vibe/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
vibe-audio/: CHANGELOG.md  Cargo.toml  README.md
vibe-audio/examples/: custom_system_fetcher.rs  default_system_fetcher.rs  simple.rs
vibe-audio/src/: bpm_detector.rs  lib.rs  sample_processor.rs  util.rs
vibe-audio/src/bar_processor/: channel_ctx.rs  config.rs  mod.rs
vibe-audio/src/bar_processor/channel_ctx/: fft_out_metadata.rs  mod.rs  padding.rs  supporting_points.rs
vibe-audio/src/fetcher/: dummy.rs  mod.rs  system_audio.rs
vibe-audio/src/interpolation/: context.rs  cubic_spline.rs  descriptor.rs  linear.rs  mod.rs  nothing.rs
vibe-cli/: Cargo.toml
vibe-cli/src/: main.rs
vibe-daemon/: Cargo.toml
vibe-daemon/src/: cli.rs  config.rs  daemon.rs  lib.rs  lib.rs.backup  main.rs  socket_listener.rs  state.rs  window.rs
vibe-daemon/src/config/: default_shader.glsl  mod.rs
vibe-daemon/src/gpu/: config.rs  mod.rs
vibe-daemon/src/output/: config.rs  mod.rs  shader_context.rs
vibe-daemon/src/output/component/: bars.rs  fragment_canvas.rs  mod.rs
vibe-daemon/src/output/config/: component.rs  mod.rs
vibe-daemon/src/output/shader/: config.rs  mod.rs
vibe-daemon/src/output/shaders/: default.glsl
vibe-daemon/src/renderer/: mod.rs  vertex_shader.wgsl
vibe-daemon/src/resources/: audio.rs  resolution.rs
vibe-daemon/src/socket/: mod.rs
vibe-daemon/src/state/: mod.rs  resources.rs  vibe_output_state.rs  wayland_handle.rs  wgpu_state.rs
vibe-renderer/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
vibe-renderer/examples/: aurodio.rs  bars.rs  bars_with_color_variant.rs  bars_with_fragment_code_variant.rs  bars_with_presence_gradient_variant.rs  circle_curved.rs  fragment_canvas.rs  graph_with_color_variant.rs  graph_with_horizontal_gradient.rs  graph_with_vertical_gradient.rs  radial_color_variant.rs  value_noise.rs
vibe-renderer/examples/demo/: cli.rs  main.rs  texture_component.rs  texture_component_shader.wgsl
vibe-renderer/src/: bind_group_manager.rs  cache.rs  lib.rs  random.rs  resource_manager.rs  util.rs
vibe-renderer/src/components/: bind_group_manager.rs  mod.rs
vibe-renderer/src/components/aurodio/: descriptor.rs  mod.rs  shader.wgsl
vibe-renderer/src/components/bars/: descriptor.rs  fragment_preamble.glsl  fragment_preamble.wgsl  fragment_shader.wgsl  mod.rs  shader.wgsl  shader_structure.rs  vertex_shader.wgsl
vibe-renderer/src/components/chessy/: descriptor.rs  mod.rs
vibe-renderer/src/components/circle/: descriptor.rs  fragment_graph.wgsl  mod.rs  vertex_shader.wgsl
vibe-renderer/src/components/fragment_canvas/: fragment_preamble.glsl  fragment_preamble.wgsl  mod.rs  vertex_shader.wgsl
vibe-renderer/src/components/graph/: descriptor.rs  fragment.wgsl  fragment_color.wgsl  fragment_horizontal_gradient.wgsl  fragment_vertical_gradient.wgsl  mod.rs  shader.wgsl
vibe-renderer/src/components/live_wallpaper/: mod.rs
vibe-renderer/src/components/radial/: descriptor.rs  mod.rs  shader.wgsl
vibe-renderer/src/components/rising_blocks/: block_creator.rs  block_datas.rs  block_manager.rs  bounded_ring_buffer.rs  descriptor.rs  mod.rs  shader.wgsl
vibe-renderer/src/components/sdf_mask/: descriptor.rs  mod.rs
vibe-renderer/src/components/utils/: bounded_ring_buffer.rs  full_screen_vertex.wgsl  mod.rs  wgsl_types.rs
vibe-renderer/src/components/value_noise/: mod.rs
vibe-renderer/src/components/wallpaper_encrust/: descriptor.rs  mod.rs  shader.wgsl
vibe-renderer/src/components/white_noise/: descriptor.rs  mod.rs  shader.wgsl
vibe-renderer/src/texture_generation/: mod.rs
vibe-renderer/src/texture_generation/edge_distance_map/: gray_scale.wgsl  gray_scale_and_gaussian_blur.wgsl  mod.rs
vibe-renderer/src/texture_generation/gaussian_blur/: mod.rs  shader.wgsl
vibe-renderer/src/texture_generation/light_sources/: mod.rs
vibe-renderer/src/texture_generation/sdf_mask/: mod.rs  shader.wgsl
vibe-renderer/src/texture_generation/value_noise/: mod.rs  shader.wgsl
vibe-renderer/tests/: audio_samples.txt  fetcher.rs  mod.rs
vibe-renderer/tests/aurodio/: mod.rs
vibe-renderer/tests/bar/: frag.glsl  frag.wgsl  mod.rs
vibe-renderer/tests/bar_color_variant/: mod.rs
vibe-renderer/tests/bar_fragment_code_variant/: mod.rs
vibe-renderer/tests/bar_presence_gradient_variant/: mod.rs
vibe-renderer/tests/bar_with_color_variant/: mod.rs
vibe-renderer/tests/bar_with_fragment_code_variant/: mod.rs
vibe-renderer/tests/bar_with_presence_gradient_variant/: mod.rs
vibe-renderer/tests/bars/: mod.rs
vibe-renderer/tests/bars/border/: mod.rs
vibe-renderer/tests/bars/format/: mod.rs
vibe-renderer/tests/bars/placement/: mod.rs
vibe-renderer/tests/bars/presence_gradient/: mod.rs
vibe-renderer/tests/chessy/: mod.rs
vibe-renderer/tests/circle_graph/: mod.rs
vibe-renderer/tests/fragment_canvas/: attribute.md  frag.glsl  frag.wgsl  frag_with_img.glsl  frag_with_img.wgsl  frag_without_img.glsl  frag_without_img.wgsl  mod.rs
vibe-renderer/tests/graph/: mod.rs
vibe-renderer/tests/graph_border_color_variant/: mod.rs
vibe-renderer/tests/graph_color_variant/: mod.rs
vibe-renderer/tests/graph_horizontal_gradient_variant/: mod.rs
vibe-renderer/tests/graph_vertical_gradient_variant/: mod.rs
vibe-renderer/tests/live_wallpaper_light_sources/: mod.rs
vibe-renderer/tests/live_wallpaper_pulse_edges/: mod.rs
vibe-renderer/tests/radial/: mod.rs
vibe-renderer/tests/radial_color_variant/: mod.rs
vibe-renderer/tests/radial_height_gradient_variant/: mod.rs
vibe-renderer/tests/radial_with_color_variant/: mod.rs
vibe-renderer/tests/radial_with_height_gradient_variant/: mod.rs
vibe/i18n/en/: vibe.ftl
vibe/resources/: app.desktop  app.metainfo.xml
vibe/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  state.rs  window.rs
vibe/src/output/: mod.rs
vibe/src/types/: size.rs
(+128 files in other folders)
