[workspace]
members = ["vibe-renderer", "vibe"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "24.0", default-features = false, features = [
  "wgsl",
  "glsl",
  "naga-ir",
  "serde",
] }

serde = { version = "1", features = ["derive"] }
tracing = "0.1"
shady-audio = { version = "14", features = ["serde"] }
thiserror = "2"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true
