[workspace]
members = ["vibe-renderer", "vibe"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "24.0", default-features = false, features = [
  "wgsl",
  "glsl",
  "naga-ir",
  "serde",
] }

serde = { version = "1", features = ["derive"] }
tracing = "0.1"
shady-audio = { version = "15", features = ["serde"] }
thiserror = "2"
cgmath = { version = "0.18", features = ["serde"] }

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true
