[package]
name = "vibe-daemon"
version = "0.0.1"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop music visualizer"
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe"

[dependencies]
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

toml.workspace = true
serde.workspace = true

bytemuck = "1.21"
pollster = "0.4"
raw-window-handle = "0.6"

wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
smithay-client-toolkit = "0.19"

wgpu = { version = "24.0", features = ["glsl", "naga-ir", "serde"] }
xdg = "2.5"
shady = { version = "6.0", default-features = false, features = [
  "audio",
  "time",
  "resolution",
] }
