[package]
name = "vibe-renderer"
version = "0.0.1"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "Renderer ecosystem for vibe."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe/vibe-renderer"
publish = false

[dependencies]
serde.workspace = true
shady-audio.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

pollster = "0.4"
bytemuck = "1.23"
rand = "0.9"
cgmath = { version = "0.18", features = ["serde"] }

[dev-dependencies]
winit = "0.30"
image = "0.25"
