[package]
name = "vibe-renderer"
version = "0.0.2"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "Renderer ecosystem for vibe."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe/vibe-renderer"
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true
cgmath.workspace = true
vibe-audio.workspace = true

pollster = "0.4"
bytemuck = "1.24"
fastrand = "2.3"

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true

winit = "0.30"
image = "0.25"
