[package]
name = "vibe"
version = "0.0.2"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop music visualizer for wayland."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe"
publish = false

[dependencies]
serde.workspace = true
shady-audio.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

anyhow = "1"
raw-window-handle = "0.6"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
smithay-client-toolkit = "0.19"

vibe-renderer = { path = "../vibe-renderer" }
xdg = "2.5"
toml = "0.8"

winit = "0.30"
notify = "8"
clap = { version = "4.5", features = ["derive"] }
