[package]
name = "vibe"
version = "2.0.1"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop music visualizer for wayland."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe"
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
vibe-audio.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true
cgmath.workspace = true
clap.workspace = true

raw-window-handle = "0.6"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
smithay-client-toolkit = "0.20"

vibe-renderer = { path = "../vibe-renderer" }
xdg = "3.0"
toml = "0.9"

winit = "0.30"
notify = "8"
